--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.37",
     "remixicon": "^4.2.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
