--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.18",
+    "flowbite": "^2.3.0",
     "postcss": "^8.4.37",
     "remixicon": "^4.2.0",
     "vue": "^3.4.21",
